# task-manager

./: .coverage  .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
config/: settings.py
migrations/: env.py
migrations/versions/: 3ad15c67ae23_init_tables.py  88f4068f2fe1_add_cascade_to_events_task_id.py  faaa45b7bda7_initial_tables.py
prometheus/: prometheus_config.yml
scheduler/: calendar_scheduler.py  job.py
src/: logger.py  main.py
src/api/: __init__.py  auth.py  dependencies.py  events.py  github.py  integrations.py  metrics.py  project.py  tasks.py  users.py
src/schemas/: event.py  integration.py  project.py  task.py  user.py
src/services/: github.py
src/storage/: rabbit.py  redis.py
src/storage/db/: db.py  repositories.py
src/storage/db/model/: meta.py  models.py
tests/: conftest.py
tests/api/: test_auth_api.py  test_tasks_api.py
tests/repository/: test_task_repository.py
tests/scheduler/: test_calendar_scheduler.py
tests/unit/: test_auth_tokens.py  test_dependencies.py  test_github_service.py  test_settings.py
worker/: __main__.py  app.py  web_app.py
worker/clients/: google.py
worker/handler/: handle_calendar_sync.py
